# nspace

./: .gitignore  Makefile  Makefile.am  Makefile.in  README  autogen.sh  bsdinit.sh  configure.ac  obsd_vars.sh
backup/: main_tcpclient.cpp  main_tcpserver.cpp
data/neural/gamlp/: input_xor.csv  input_xx01.csv
data/neural/hopimage/: image01.map  image02.map  image03.map  image04.map  image05.map
data/neural/kmap/: input.csv  input_bk.csv  sorting_arx.out  sorting_arx_fake.out  sorting_arx_fake_n.out  sorting_arx_n.out
include/: adefs.h  advtec.h  afilter.h  afunction.h  date.h  genetic.h  graph.h  ineuron.h  logger.h  mnet.h  multimedia.h  neuralnet.h  neuron.h  singleton.h  synapse.h  timemark.h  timeserie.h  tools.h
include/afilter/: adapfil.h  filter.h
include/algebra/: matrix3.h  matrix4.h  matrixn.h  quaternion.h  transmatrix.h  vector4.h  vectorn.h
include/graph/: dedge.h  dgraph.h  dnode.h
include/mnet/: tcpmsg.h  tcpserver.h  tcpsocket.h
include/multimedia/: imagemap.h
include/net/: tcpmsg.h  tcpserver.h  tcpsocket.h
include/neuralapp/: backprop.h  gatrainer.h  hopfield.h  kneuron.h
include/sigpro/: filter.h  sigvec.h
include/tree/: atree.h  tnode.h
modules/advtec/: Makefile.am
modules/advtec/include/: advtec.h  sorting.h  ufds.h
modules/advtec/src/: genetic.cpp
modules/neural/: Makefile.am
modules/neural/include/: afunction.h  ineuron.h  netmngr.h  neural.h  neuralnet.h  neuron.h  synapse.h
modules/neural/include/neuralapp/: gatrainer.h  hopfield.h  kneuron.h  kohonen.h  mlp.h
modules/neural/src/: ineuron.cpp  neuralnet.cpp  neuron.cpp
modules/neural/src/neuralapp/: kneuron.cpp  kohonen.cpp  mlp.cpp
modules/tools/: Makefile.am
modules/tools/include/: adefs.h  algebra.h  aux.h  date.h  logger.h  mnet.h  sigpro.h  singleton.h  spool.h  timepoint.h  tools.h  tree.h
modules/tools/include/afilter/: adapfil.h
modules/tools/include/algebra/: matrix4.h  matrixn.h  quaternion.h  transmatrix.h  vector3.h  vectorn.h
modules/tools/include/graph/: dedge.h
modules/tools/include/multimedia/: csvtools.h  imagemap.h
modules/tools/include/net/: msocket.h  tcpserver.h  tcpsocket.h
modules/tools/include/sigpro/: adapfil.h  filter.h  sigtools.h  sigvec.h
modules/tools/include/tree/: atree.h  tnode.h
modules/tools/src/: aux.cpp  date.cpp  logger.cpp  timepoint.cpp  timeserie.cpp
modules/tools/src/afilter/: adapfil.cpp
modules/tools/src/algebra/: matrix3.cpp  matrix4.cpp  matrixn.cpp  quaternion.cpp  vector3.cpp  vector4.cpp  vectorn.cpp
modules/tools/src/multimedia/: csvtools.cpp  imagemap.cpp  jpegtools.cpp
modules/tools/src/net/: tcpmsg.cpp  tcpserver.cpp  tcpsocket.cpp
modules/tools/src/sigpro/: adapfil.cpp  filter.cpp
modules/tools/src/tree/: atree.cpp  tnode.cpp
src/: aux.cpp  genetic.cpp  ineuron.cpp  logger.cpp  main.cpp  netmngr.cpp  neuralnet.cpp  neuron.cpp  synapse.cpp  timemark.cpp  timeserie.cpp
src/afilter/: adapfil.cpp  filter.cpp
src/algebra/: matrix3.cpp  matrixn.cpp  transmatrix.cpp  vector4.cpp  vectorn.cpp
src/mnet/: tcpmsg.cpp  tcpserver.cpp  tcpsocket.cpp
src/multimedia/: csvtools.cpp  imagemap.cpp  jpegtools.cpp
src/net/: msocket.cpp  tcpserver.cpp  tcpsocket.cpp
src/neuralapp/: backprop.cpp  gatrainer.cpp  hopfield.cpp  kohonen.cpp  mlp.cpp
src/sigpro/: adapfil.cpp  filter.cpp
